	* configs/stm3240g-eval/src/up_lcd.c: Add LCD from for the STM3240G-EVAL (the
	  initial check-in is just a stm3210e-eval driver with renaming).
	* sched/sched_setscheduler.c:  Correct successful return value (Contributed
	  by Richard Cochran).
	* include/fcntl.h and lib/stdio:  Ignore CONFIG_STDIO_LINEBUFFER is the
	  file was opened in binary mode.
	* lib/stdio/lib_fopen.c:  Correct an error in parsing open mode string.  The
	  plus sign may not appear right after the basic mode.  For example, "r+", "rb+",
	  and "r+b" are all valid open strings and mean the same thing.
	* lib/stdio/lib_fopen.c:  Correct return errno value from f_open() and
	  f_fdopen() if the open mode string is invalid.
	* drivers/serial/serial.c:  Do not disable Rx interrupts on each byte.
	  Rather, only disable Rx interrupts when the Rx ring buffer may be empty.
	* include/nuttx/usb/audio.h:  USB Audio 1.0 definitions (in progress).
	* arch/arm/src/stm32/stm32fxx_dma.c:  STM32 F4 DMA now supports circular
	  buffer mode (contributed by Mike Smith)
	* arch/arm/src/stm32/stm32_serial.c:  The serial driver can now support
	  Rx DMA into a circular buffer (contributed by Mike Smith)
	* configs/pic32mx7mmb: Beginning of a configuration for the Mikroelektronka
	  PIC32MX7 Multimedia Board (MMB).
	* net/recvfrom.c:  Fix a compilation problem.  Some UDP logic was conditioned
	  on TCP, not UDP.
	* drivers/usbdev/cdcacm.c: Fix an infinite loop that occurs when the serial
	  device is unregisters.
	* arch/arm/src/stm32/stm32_otgfs.c: The driver needs to reset the software (in
	  order to flush the requests) and to disable the software connection when the
	  device is unregistered.
	* include/sys/prctl.h, sched/prctl.c, include/pthread.h:  Add interfaces to
	  support getting and setting of the thread or task name.
	* configs/ubw32:  Added a configuration to support the Sparkfun UBW32 PIC32 board.
	* configs/ubw32/nsh:  Added an NSH configuration for the Sparkfun UBW32 PIC32 board.