@@ -2690,3 +2690,4 @@
 	  support getting and setting of the thread or task name.
 	* configs/ubw32:  Added a configuration to support the Sparkfun UBW32 PIC32 board.
 	* configs/ubw32/nsh:  Added an NSH configuration for the Sparkfun UBW32 PIC32 board.
+	* configs/ubw32/up_buttons.c:  Added button support for Bit Whacker board.
